--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
+    "vue-analytics": "^5.17.0",
+    "vue-scroll": "^2.1.12",
     "vue-template-compiler": "^2.5.21"
   }
 }
