--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-analytics": "^5.17.0",
+    "vue-parallaxy": "^1.1.1",
     "vue-scroll": "^2.1.12",
     "vue-template-compiler": "^2.5.21"
   }
